[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovoi-rfc9421-verifier"
version = "0.2.1"
description = "AlgoVoi RFC 9421 HTTP Message Signatures + RFC 9530 Content-Digest reference verifier"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AlgoVoi", email = "chopmob@gmail.com" },
]
keywords = [
  "rfc9421",
  "rfc9530",
  "http-signatures",
  "ed25519",
  "agentic-payments",
  "compliance",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security :: Cryptography",
  "Typing :: Typed",
]
dependencies = [
  "pynacl>=1.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/chopmob-cloud/algovoi-rfc9421-verifier"
Documentation = "https://github.com/chopmob-cloud/algovoi-rfc9421-verifier#readme"
Repository = "https://github.com/chopmob-cloud/algovoi-rfc9421-verifier"
Issues = "https://github.com/chopmob-cloud/algovoi-rfc9421-verifier/issues"
"Conformance fixture" = "https://github.com/chopmob-cloud/algovoi-jcs-conformance-vectors/tree/main/vectors/rfc9421_proxy_chain_v0"
"IETF I-D" = "https://datatracker.ietf.org/doc/draft-hopley-x402-compliance-receipt/"

[tool.setuptools.packages.find]
where = ["."]
include = ["algovoi_rfc9421_verifier*"]
